Implemented Arcadia page and animations
Implemented the arcadia page with the different versions available.
Updated the settings icon to be white.
Implemented a sligh fade in effect to the website.

--- a/pages/arcadia/style.css
+++ b/pages/arcadia/style.css
@@ -29,8 +29,8 @@ a:hover {
 }
 
 body {
-    background: black url("assets/images/star-bg.jpg") repeat;
-    animation: moveTwinkleBack 180s alternate infinite;
+    background: black url("../../assets/images/star-bg.jpg") repeat fixed;
+    animation: moveTwinkleBack 600s alternate infinite;
 }
 
 @keyframes moveTwinkleBack {
@@ -38,11 +38,12 @@ body {
         background-position: 0 0;
     }
     to {
-        background-position: -5000px 9000px;
+        background-position: -50000px 90000px;
     }
 }
 
 .container {
+    animation: transitionIn 0.75s;
     flex-direction: column;
     font-size: 14pt;
     background-color: rgba(45, 45, 45, 0.75);
@@ -50,7 +51,7 @@ body {
     border-radius: 15px;
     margin: 15px auto auto;
     padding: 20px;
-    width: 85%;
+    max-width: 1200px;
 }
 
 .container h2 {
@@ -63,6 +64,31 @@ body {
     text-align: right;
     text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
     margin-bottom: -25px;
+}
+
+.fa-arrow-left {
+    font-size: 14pt;
+    filter: drop-shadow(2px 4px 6px black);
+    text-decoration: none;
+    animation: leftArrowBlink 4s ease-in-out infinite;
+}
+
+@keyframes leftArrowBlink {
+    0% {
+        color: whitesmoke;
+    }
+    50% {
+        color: #ff3131;
+    }
+    100% {
+        color: whitesmoke;
+    }
+}
+
+.fa-arrow-left:hover {
+    animation: step-end;
+    text-decoration: none;
+    color: orange;
 }
 
 .flex {
@@ -100,7 +126,6 @@ html {
     font-size: 24pt;
     font-weight: bold;
     flex-direction: column;
-    padding-bottom: 50px;
     text-shadow: -2px -2px 0 #000, 2px -2px 0 #000, -2px 2px 0 #000, 2px 2px 0 #000;
 }
 
@@ -151,8 +176,8 @@ html {
 }
 
 .project-desc {
+    justify-content: center;
     padding: 20px;
-    max-width: 175px;
     text-align: justify;
     border-radius: 20px;
     border: 10px;
@@ -172,61 +197,39 @@ html {
     }
 }
 
+.project-text {
+    max-width: 1000px;
+    text-align: center;
+}
+
+.project-text li {
+    padding-bottom: 5px;
+}
+
 .project-img {
+    display: block;
+    justify-content: center;
     border-radius: 20px;
     filter: drop-shadow(2px 4px 6px black);
-    width: 175px;
+    width: 200px;
+    margin-left: auto;
+    margin-right: auto;
     margin-bottom: 15px;
-    transition: 100ms ease;
-}
-
-.project-img:hover {
-    transform: scale(1.05);
-}
-
-#nav-holder {
-    width:50%;
-    margin: 0 auto;
-    justify-content: space-evenly;
-    background-color: rgba(9, 9, 9, 0.85);
-    flex-wrap: wrap;
-    border-radius: 15px;
-    padding: 20px;
-}
-
-.nav-el {
-    animation: none;
-    padding: 8px;
-    text-decoration: none;
-    color: rgb(255, 255, 255);
-    text-align: center;
-    font-weight: bold;
-    border-radius: 15px;
-}
-
-.nav-el:hover {
-    border-radius: 15px;
-    background-color: rgb(131, 131, 131);
-    padding: 8px;
-    text-align: center;
-    transition: 100ms ease;
-}
-
-.nav-el:active {
-    color: rgb(49, 138, 255);
-    text-decoration: none;
-    text-shadow: -0.5px -0.5px 0 #000000, 0.5px -0.5px 0 #000000, -0.5px 0.5px 0 #000000, 0.5px 0.5px 0 #000000;
-    transition: 100ms ease;
 }
 
 .shadow {
     box-shadow: 0 0 25px rgba(0, 0, 0, 0.33);
 }
 
-@media only screen and (max-width: 960px) {
-    #nav-holder {
-        flex-direction: column;
-        align-items: center;
+@keyframes transitionIn {
+    from {
+        opacity: 0;
+        transform: translateY(-10px);
+    }
+
+    to {
+        opacity: 1;
+        transform: translateY(0);
     }
 }
 
@@ -240,14 +243,5 @@ html {
         max-width: 100%;
         height: 80px;
         width: 80px;
-    }
-
-    #nav-holder {
-        flex-direction: column;
-        align-items: center;
-    }
-
-    .nav-el {
-        text-align: center;
     }
 }
