--- a/style.css
+++ b/style.css
@@ -261,15 +261,17 @@ html {
     bottom: 20px;
     right: 30px;
     z-index: 1;
-    background-color: red; /* Set a background color */
-    color: white; /* Text color */
-    cursor: pointer; /* Add a mouse pointer on hover */
-    padding: 15px; /* Some padding */
+    background-color: rgba(255, 49, 49, 0.75);
+    cursor: pointer;
+    font-size: 18pt;
+    padding: 12px;
     border-radius: 25%;
+    animation: transitionIn 0.25s ease-in
 }
 
 #goTopButton:hover {
-    background-color: #555; /* Add a dark-grey background on hover */
+    background-color: rgba(255, 165, 0, 0.75);
+    display: block;
 }
 
 @keyframes transitionIn {
