--- a/style.css
+++ b/style.css
@@ -1,301 +1,194 @@
 * {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     color: whitesmoke;
-
-    text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
-}
-
-a {
-    text-decoration: none;
-    animation: anchorBlink 4s ease-in-out infinite;
-}
-
-a:hover {
-    animation: step-end;
-    text-decoration: none;
-    color: orange;
-}
-
-@keyframes anchorBlink {
-    0% {
-        color: whitesmoke;
-    }
-    50% {
-        color: yellow;
-    }
-    100% {
-        color: whitesmoke;
-    }
-}
-
-#about-me {
-    transition: color 0.75s;
-}
-
-#about-me:target {
-    color: yellow;
+    font-family: monospace;
+    font-size: 1.1rem;
+    background: rgb(32, 32, 33);
 }
 
 body {
-    background: black url("assets/images/star-bg.jpg") repeat fixed;
-    animation: moveStars 600s alternate infinite;
-}
-
-@keyframes moveStars {
-    from {
-        background-position: 0 0;
-    }
-    to {
-        background-position: -50000px 90000px;
-    }
-}
-
-#contacts {
-    transition: color 0.75s;
-}
-
-#contacts:target {
-    color: yellow;
-}
-
-.container {
-    animation: transitionIn 0.8s;
-    flex-direction: column;
-    font-size: 14pt;
-    background-color: rgba(45, 45, 45, 0.75);
-    border: 1px solid black;
-    border-radius: 15px;
-    margin: 15px auto auto;
-    padding: 20px;
+    padding-top: 50px;
     max-width: 1200px;
+    height: 100%;
+    margin: 0 auto;
 }
 
-.container h2 {
-    font-style: italic;
-}
-
-#clock {
-    font-size: 20pt;
-    flex-direction: column;
-    text-align: right;
-    text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
-    margin-bottom: -25px;
-}
-
-.flex {
+.header {
     display: flex;
-}
-
-#github {
-    flex-direction: column;
     align-items: center;
-    padding-bottom: 15px;
+    justify-content: space-between;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 
-h2 {
-    font-size: 24pt;
-    flex-direction: column;
+.header h1 {
+    font-size: 150%;
+}
+
+.header h2 {
+    color: #a9a9a9;
     text-align: center;
 }
 
-html {
-    scroll-behavior: smooth;
+#body {
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
+#body h2 {
+    font-size: 125%;
+    text-align: left;
 }
 
 .logo {
+    max-width: 128px;
+    max-height: 128px;
     border-radius: 50%;
-    display: block;
-    max-width: 10%;
-    height: auto;
-    width: auto;
-    margin-left: auto;
-    margin-right: auto;
+    justify-content: flex-start;
 }
 
-.logo-desc {
-    align-items: center;
-    font-size: 24pt;
-    font-weight: bold;
-    flex-direction: column;
-    padding-bottom: 50px;
-    text-shadow: -2px -2px 0 #000, 2px -2px 0 #000, -2px 2px 0 #000, 2px 2px 0 #000;
+.social-icons {
+    display: flex;
+    gap: 10px;
 }
 
-/*noinspection ALL*/
-.logo-desc i::after {
-    content: ".dev";
-    color: hsl(var(--customHue), 100%, 50%);
-    transition: color 0.5s linear;
+.social-icons i {
+    font-size: 36px;
+    transition: 100ms ease-in-out;
 }
 
-#my-projects {
-    transition: color 0.75s;
+.social-icons i:hover {
+    scale: 120%;
+    color: #fffdc4;
 }
 
-#my-projects:target {
-    color: yellow;
+.content {
+    height: 2000px;
 }
 
-#nav-holder {
-    width:50%;
-    margin: 0 auto;
-    justify-content: space-evenly;
-    background-color: rgba(9, 9, 9, 0.85);
-    flex-wrap: wrap;
-    border-radius: 15px;
-    padding: 20px;
-}
-
-.nav-el {
-    animation: none;
-    padding: 8px;
-    text-decoration: none;
-    color: rgb(255, 255, 255);
-    text-align: center;
-    font-weight: bold;
-    border-radius: 15px;
-}
-
-.nav-el:hover {
-    border-radius: 15px;
-    background-color: rgb(131, 131, 131);
-    padding: 8px;
-    text-align: center;
-    transition: 100ms ease;
-}
-
-.nav-el:active {
-    color: rgb(49, 138, 255);
-    text-decoration: none;
-    text-shadow: -0.5px -0.5px 0 #000000, 0.5px -0.5px 0 #000000, -0.5px 0.5px 0 #000000, 0.5px 0.5px 0 #000000;
-    transition: 100ms ease;
-}
-
-.projects {
+.my-skills-section {
+    display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-evenly;
-    margin: 10px;
-    color: white;
+    justify-content: center;
+    align-items: stretch;
+    padding: 15px;
+    column-gap: 30px;
+    row-gap: 20px;
 }
 
-.project-title {
-    text-align: center;
-    font-size: 16pt;
-    font-weight: bold;
-    text-decoration: blink;
-    padding-bottom: 20px;
-    transition: 100ms ease;
-    animation: slight-wave 1.5s alternate infinite;
-}
-
-@keyframes slight-wave {
-    from {transform: scale(1.0);}
-    to {transform: scale(1.1);}
-}
-
-.project-desc {
-    padding: 20px;
-    max-width: 175px;
-    text-align: justify;
+.skill-bubble {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid rgba(245, 245, 245, 0.5);
     border-radius: 20px;
-    border: 10px;
-    transition: 100ms ease;
+    padding: 25px;
+    min-width: 200px;
+    max-width: 200px;
+    transition: 100ms ease-in-out;
 }
 
-.project-desc:hover {
-    animation: projectDescShine 1.5s alternate infinite;
+.skill-bubble-img {
+    max-width: 80px;
+    max-height: 80px;
+    transition: 100ms ease-in-out;
 }
 
-@keyframes projectDescShine {
-    from {
-        background-color: rgba(255, 255, 255, 0.00);
-    }
-    to {
-        background-color: rgba(255, 255, 255, 0.12);
-    }
+.php-skill-img {
+    max-width: 130px;
+    max-height: 130px;
 }
 
-.project-img {
-    border-radius: 20px;
-    filter: drop-shadow(2px 4px 6px black);
-    width: 175px;
-    margin-bottom: 15px;
-    transition: 100ms ease;
+.skill-bubble-img:hover {
+    scale: 120%;
 }
 
-.project-img:hover {
-    transform: scale(1.05);
-}
-
-.shadow {
-    box-shadow: 0 0 25px rgba(0, 0, 0, 0.33);
-}
-
-#skill {
-    transition: color 0.75s;
-}
-
-#skill:target {
-    color: yellow;
-}
-
-#goTopButton {
-    display: none;
-    position: fixed;
-    bottom: 20px;
-    right: 30px;
-    z-index: 1;
-    background-color: rgba(255, 49, 49, 0.75);
-    cursor: pointer;
-    font-size: 18pt;
+.skill-description {
+    font-style: italic;
     padding: 12px;
-    border-radius: 25%;
-    animation: transitionIn 0.25s ease-in
+    flex: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
 }
 
-#goTopButton:hover {
-    background-color: rgba(255, 165, 0, 0.75);
-    display: block;
+.skill-usage {
+    font-weight: bold;
 }
 
-@keyframes transitionIn {
-    from {
-        opacity: 0;
-        transform: translateY(-10px);
-    }
-
-    to {
-        opacity: 1;
-        transform: translateY(0);
-    }
+.skill-usage-very-high {
+    color: #ff6969;
 }
 
-@media only screen and (max-width: 960px) {
-    #nav-holder {
-        flex-direction: column;
-        align-items: center;
-    }
+.skill-usage-high {
+    color: #ff7b1b;
 }
 
-@media only screen and (max-width: 755px) {
-    #clock {
-        text-align: center;
-        padding-bottom: 50px;
-    }
+.skill-usage-medium {
+    color: #dcda4e;
+}
 
-    .logo {
-        max-width: 100%;
-        height: 80px;
-        width: 80px;
-    }
+.skill-usage-low {
+    color: #53c54e;
+}
 
-    #nav-holder {
-        flex-direction: column;
-        align-items: center;
-    }
+.skill-usage-very-low {
+    color: #3f7bff;
+}
 
-    .nav-el {
-        text-align: center;
-    }
+.my-projects-section {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding: 15px;
+    column-gap: 30px;
+    row-gap: 20px;
+}
+
+.project-bubble {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid rgba(245, 245, 245, 0.5);
+    border-radius: 20px;
+    padding: 25px;
+    min-width: 200px;
+    max-width: 200px;
+    text-align: center;
+}
+
+.project-name {
+    padding-top: 10px;
+    font-size: 110%;
+    font-weight: bold;
+}
+
+.project-bubble-img {
+    max-width: 120px;
+    max-height: 120px;
+    border-radius: 20px;
+    transition: 100ms ease-in-out;
+}
+
+.project-bubble-img:hover {
+    scale: 110%;
+}
+
+.project-description {
+    font-style: italic;
+    padding: 12px;
+    flex: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    font-size: 16px;
+}
+
+.project-made-in {
+    font-weight: bold;
 }
