Add mobile responsiveness to CSS
Added media queries to the CSS in order to improve the styling of the website on mobile devices. This will create a better user experience on smaller screens, as elements will now be properly aligned and displayed. Aimed particularly at devices with max width of 600px. Changed aspects include body padding, header and social icon layout, and content justification in skills and projects sections.

--- a/style.css
+++ b/style.css
@@ -192,3 +192,28 @@ body {
 .project-made-in {
     font-weight: bold;
 }
+
+@media screen and (max-width: 600px) {
+    body {
+        padding-top: 25px;
+    }
+
+    .header {
+        flex-direction: column;
+        text-align: center;
+    }
+
+    .social-icons {
+        justify-content: center;
+    }
+
+    .my-skills-section, .my-projects-section {
+        justify-content: space-around;
+        gap: 15px;
+    }
+
+    .skill-bubble, .project-bubble {
+        min-width: 100px;
+        max-width: 100px;
+    }
+}
