"Update project names to uppercase and modify CSS styles"
The changes in this commit include the conversion of project names to uppercase in 'views/projects.php'. This has been done to ensure consistency in displaying project names across the application. The project names in 'ProjectsController.php' are also updated replacing '.' with ':'. The styling of '.social-icons i:hover' has been altered for better visibility. Another important change includes the addition of 'overflow-wrap: break-word' and related changes to the '.project-name' styles to handle long strings without breaking the layout.

--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ body {
 
 .social-icons i:hover {
     scale: 120%;
-    color: #fffdc4;
+    color: #f1b900;
 }
 
 .content {
@@ -165,6 +165,7 @@ body {
     padding-top: 10px;
     font-size: 110%;
     font-weight: bold;
+    overflow-wrap: break-word;
 }
 
 .project-bubble-img {
@@ -215,5 +216,10 @@ body {
     .skill-bubble, .project-bubble {
         min-width: 100px;
         max-width: 100px;
+    }
+
+    .project-name {
+        font-size: 90%;
+        overflow: auto;
     }
 }
