Add usage class to Skills controller and adjust styles
A "usage_class" field was added to the SkillsController items to allow for better CSS targeting and granular style control. It will aid in highlighting the skills' usage levels, thereby enhancing the overall user experience. The names of the "usage" levels were also modified, replacing hyphens with spaces for better readability.

Furthermore, some minor adjustments were made to the 'style.css' file to make the skill descriptions and usage labels more readable on smaller screens. Specifically, font sizes were reduced, preventing overflow and ensuring a smoother visual experience.

The changes were reflected in 'views/skills.php' where 'usage_class' is now used for CSS targeting instead of 'usage'.

--- a/style.css
+++ b/style.css
@@ -214,12 +214,29 @@ body {
     }
 
     .skill-bubble, .project-bubble {
-        min-width: 100px;
-        max-width: 100px;
+        min-width: 80px;
+        max-width: 80px;
+        font-size: 85%;
     }
 
     .project-name {
-        font-size: 90%;
+        font-size: 80%;
+    }
+
+    .project-description {
+        font-size: 75%;
+    }
+
+    .skill-description {
+        font-size: 85%;
         overflow: auto;
+    }
+
+    .skill-usage {
+        font-size: 75%;
+    }
+
+    .project-made-in {
+        font-size: 70%;
     }
 }
